--- a/index.html
+++ b/index.html
@@ -4,9 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CV</title>
 </head>
 <body>
+    <hr>
+    <section class="personal"> 
+        <h1>Sergey Zinchuk</h1>
+    <ul>
+        <li><strong>Location:</strong>Pskov, Russia</li>
+        <li><strong>Phone:</strong>+79095756231</li>
+        <li><strong>E-mail:</strong>03goose03@gmail.com</li>
+        <li><strong>Github:</strong>ZSSergei4</li>
+    </ul>
+    </section>
+    <hr>
+    <section class="about">
+        <h2>About me:</h2>
+    <p>I work as a forensic expert and I want to gain new knowledge in the field of front-end development.</p>
+    </section>
     
-</body>
+    <hr>
+    <section class="skills">
+        <h2>Skills:</h2>
+            <ul>
+                <li><a href="https://stepik.org/cert/20383">Python basic</a></li>
+                <li><a href="https://stepik.org/cert/64173">JS basic</a></li>
+                <li> <a href="https://stepik.org/cert/190777">R</a></li>
+            </ul>
+    </section>
+    <hr>
+    <section class="code">
+        <p><strong>JS</strong></p>
+        <pre>
+            function testArray(a, b) {
+                var sum = 0;
+                for (var i = 0; i < a.length; i++){
+                  sum += a[i];
+                }
+                for (var j = 0; j < b.length; j++){
+                  sum += b[j]
+                }
+                return sum;
+              }  
+        </pre>
+        <p><strong>Python</strong></p>
+        <pre>
+def update_dictionary(d, key, value):
+    # put your python code here
+    if key in d:
+        d[key].append(value)
+    elif 2*key in d:
+        d[2*key].append(value)
+    else:
+        d[2*key] = []
+        d[2*key].append(value)
+        </pre>
+        <p><strong>R</strong></p>
+        <pre>
+            find_closest <- function(v, n) {
+                a <- abs(v - n)
+                  res <- which(a == min(a))
+                  return (res)
+                }
+        </pre>
+    </section>
+    <hr>
+    <section class="courses">
+        <h2>Education and courses:</h2>
+        <ul>
+            <li>Freecodecamp</li>
+            <li>Stepik.org</li>
+            <li>HTMLAcademy</li>
+            <li>learn.javascript.ru</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        <h2>Languages:</h2>\
+        <p>
+            English - A2.
+        </p>
+    </section>
+ </body>
 </html>
