fix: remove whitespaces

--- a/index.html
+++ b/index.html
@@ -35,38 +35,8 @@
     <hr>
     <section class="code">
         <p><strong>JS</strong></p>
-        <pre>
-            function testArray(a, b) {
-                var sum = 0;
-                for (var i = 0; i < a.length; i++){
-                  sum += a[i];
-                }
-                for (var j = 0; j < b.length; j++){
-                  sum += b[j]
-                }
-                return sum;
-              }  
-        </pre>
         <p><strong>Python</strong></p>
-        <pre>
-def update_dictionary(d, key, value):
-    # put your python code here
-    if key in d:
-        d[key].append(value)
-    elif 2*key in d:
-        d[2*key].append(value)
-    else:
-        d[2*key] = []
-        d[2*key].append(value)
-        </pre>
         <p><strong>R</strong></p>
-        <pre>
-            find_closest <- function(v, n) {
-                a <- abs(v - n)
-                  res <- which(a == min(a))
-                  return (res)
-                }
-        </pre>
     </section>
     <hr>
     <section class="courses">
@@ -80,7 +50,7 @@ def update_dictionary(d, key, value):
     </section>
     <hr>
     <section>
-        <h2>Languages:</h2>\
+        <h2>Languages:</h2>
         <p>
             English - A2.
         </p>
