--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <h2>About me:</h2>
     <p>I work as a forensic expert and I want to gain new knowledge in the field of front-end development.</p>
     </section>
-    
     <hr>
     <section class="skills">
         <h2>Skills:</h2>
@@ -51,9 +50,7 @@
     <hr>
     <section>
         <h2>Languages:</h2>
-        <p>
-            English - A2.
-        </p>
+        <p>English - A2.</p>
     </section>
  </body>
 </html>
