--- a/index.html
+++ b/index.html
@@ -1,56 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CV</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>CV</title>
 </head>
 <body>
-<hr>
-<section class="personal">
-<h1>Sergey Zinchuk</h1>
-<ul>
-<li><strong>Location:</strong>Pskov, Russia</li>
-<li><strong>Phone:</strong>+79095756231</li>
-<li><strong>E-mail:</strong>03goose03@gmail.com</li>
-<li><strong>Github:</strong>ZSSergei4</li>
-</ul>
-</section>
-<hr>
-<section class="about">
-<h2>About me:</h2>
-<p>I work as a forensic expert and I want to gain new knowledge in the field of front-end development.</p>
-</section>
-<hr>
-<section class="skills">
-<h2>Skills:</h2>
-<ul>
-<li><a href="https://stepik.org/cert/20383">Python basic</a></li>
-<li><a href="https://stepik.org/cert/64173">JS basic</a></li>
-<li> <a href="https://stepik.org/cert/190777">R</a></li>
-</ul>
-</section>
-<hr>
-<section class="code">
-<p><strong>JS</strong></p>
-<p><strong>Python</strong></p>
-<p><strong>R</strong></p>
-</section>
-<hr>
-<section class="courses">
-<h2>Education and courses:</h2>
-<ul>
-<li>Freecodecamp</li>
-<li>Stepik.org</li>
-<li>HTMLAcademy</li>
-<li>learn.javascript.ru</li>
-</ul>
-</section>
-<hr>
-<section>
-<h2>Languages:</h2>
-<p>English - A2.</p>
-</section>
+    
+    <header class="head">
+        <img src="./img/2022-12-14 195835.png" alt="Я">
+        <nav>
+            <ul>
+                <li class="menu"><a href="">Contacts</a></li>
+                <li class="menu"><a href="">About</a></li>
+                <li class="menu"><a href="">Skills</a></li>
+                <li class="menu"><a href="">Courses</a></li>
+                <li class="menu"><a href="">Samples</a></li>
+                <li class="menu"><a href="">Language</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section><h1>Sergey Zinchuk</h1></section>
+        <section class="About"></section>
+        <section class="skills"></section>
+        <section class="samples"></section>
+        <section class="courses"></section>
+        <section class="language"></section>
+    </main>
+    <footer>
+        <div class="foot"><a href="">Me on Github</a></div>
+    </footer>
+
 </body>
 </html>
