Update header section

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>CV</title>
+</head>
+<body>
+    <header>
+        <div class="text-h2">
+            <h2 class="headtext">Brooklyn Public Library</h2>
+        </div>
+        <nav>
+            <ul>
+                <li class="headtext"><a href="#">About</a></li>
+                <li class="headtext"><a href="#">Favorites</a></li>
+                <li class="headtext"><a href="#">Coffee shop</a></li>
+                <li class="headtext"><a href="#">Contacts</a></li>
+                <li class="headtext"><a href="#">Library Card</a></li>
+            </ul>
+        </nav>
+        <div class="login"></div>
+    </header>
+        
+    
+</body>
+</html>
